Bug 1432090 - Honor GTK button layout. r=stransky,desktop-theme-reviewers,dao
This is based off work by smurfd. But this patch doesn't support buttons
both at the left and right, which simplifies a lot the implementation.

Also, clean-up the existing env variables while at it.

Co-authored-by: Nicklas Boman <smurfdgmail.com>

Differential Revision: https://phabricator.services.mozilla.com/D132073

UltraBlame original commit: 50f07fce131a6a67ef8a2feedd3f334a9eda1fa1

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -397,18 +397,22 @@ menuitem.bookmark-item {
   .titlebar-min {
     appearance: auto;
     -moz-default-appearance: -moz-window-button-minimize;
+    -moz-box-ordinal-group: env(-moz-gtk-csd-minimize-button-position);
   }
   .titlebar-max {
     appearance: auto;
     -moz-default-appearance: -moz-window-button-maximize;
+    -moz-box-ordinal-group: env(-moz-gtk-csd-maximize-button-position);
   }
   .titlebar-restore {
     appearance: auto;
     -moz-default-appearance: -moz-window-button-restore;
+    -moz-box-ordinal-group: env(-moz-gtk-csd-maximize-button-position);
   }
   .titlebar-close {
     appearance: auto;
     -moz-default-appearance: -moz-window-button-close;
+    -moz-box-ordinal-group: env(-moz-gtk-csd-close-button-position);
   }
 
   /* When using lightweight themes, use our own buttons since native ones might
@@ -466,8 +470,7 @@ menuitem.bookmark-item {
   }
 
   @media (-moz-gtk-csd-reversed-placement) {
-    .titlebar-buttonbox-container,
-    .titlebar-close {
+    .titlebar-buttonbox-container {
       -moz-box-ordinal-group: 0;
     }
   }
