Bug 1729274 [wpt PR 30357] - Update WAVE test runner, a=testonly
Automatic update from web-platform-tests
Update WAVE test runner (#30357)

--

wpt-commits: e5c7faa6e8062dbf57eae6f58e99483cd2a4ec4d
wpt-pr: 30357

UltraBlame original commit: 643ecdb45050915c0e269dcae13673e0534a00b6

--- a/testing/web-platform/tests/tools/wave/www/css/bulma-0.7.5/bulma.css
+++ b/testing/web-platform/tests/tools/wave/www/css/bulma-0.7.5/bulma.css
@@ -1,4 +1,4 @@
-
+/*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
@@ -26,7 +26,7 @@
 .pagination-ellipsis, .tabs {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  user-select: none;
+  -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
@@ -237,7 +237,7 @@ fieldset[disabled] .pagination-ellipsis {
   cursor: not-allowed;
 }
 
-
+/*! minireset.css v0.0.4 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
 p,
@@ -10596,3 +10596,4 @@ label.panel-block:hover {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
+/*# sourceMappingURL=bulma.css.map */
