--- a/browser/components/aboutlogins/content/aboutLogins.css
+++ b/browser/components/aboutlogins/content/aboutLogins.css
@@ -10,8 +10,15 @@ body {
 body {
   --sidebar-width: 320px;
   display: grid;
-  grid-template-columns: var(--sidebar-width) 1fr;
-  grid-template-areas: "logins main";
+  /* In a narrow window, the header may be too wide
+     for a reduced size grid and expand outside of the grid.
+     A minimum width is needed on the flexible column to
+     give it a definite size so it will also expand outside
+     of the grid if necessary, to match the header. */
+  grid-template-columns: var(--sidebar-width) minmax(min-content, 1fr);
+  grid-template-rows: 75px 1fr;
+  grid-template-areas: "header header"
+                       "logins login";
 }
 
 @media (max-width: 830px) {
@@ -22,11 +29,10 @@ body {
 
 header {
   display: flex;
+  grid-area: header;
   align-items: center;
   background-color: var(--in-content-page-background);
   border-bottom: 1px solid var(--in-content-border-color);
-  padding-block: 9px;
-  padding-inline-start: 16px;
   padding-inline-end: 23px;
 }
 
@@ -58,16 +64,23 @@ login-item[data-editing="true"] + login-intro,
   display: none;
 }
 
-
-.heading-wrapper {
-  display: flex;
-  justify-content: center;
-  width: var(--sidebar-width);
-  font-weight: 600;
+login-intro,
+login-item {
+  grid-area: login;
 }
 
-body > section {
-  grid-area: main;
+#branding-logo {
+  flex-basis: var(--sidebar-width);
+  flex-shrink: 0;
+  height: 32px;
+  -moz-context-properties: fill;
+  fill: #20123a;
+}
+
+@media (prefers-color-scheme: dark) {
+  #branding-logo {
+    fill: #fff;
+  }
 }
 
 :root:not(.official-branding) #branding-logo {
@@ -80,7 +93,7 @@ body > section {
 
 .master-password-auth-required > body > header,
 .master-password-auth-required > body > login-list,
-.master-password-auth-required > body > section {
+.master-password-auth-required > body > login-intro {
   filter: blur(2px)
 }
 
