--- a/browser/components/aboutlogins/content/aboutLoginsImportReport.html
+++ b/browser/components/aboutlogins/content/aboutLoginsImportReport.html
@@ -18,9 +18,13 @@
     <link rel="stylesheet" href="chrome://browser/content/aboutlogins/aboutLogins.css">
     <link rel="stylesheet" href="chrome://browser/content/aboutlogins/aboutLoginsImportReport.css">
     <link rel="stylesheet" href="chrome://browser/content/aboutlogins/common.css">
-    <link rel="icon" href="chrome://branding/content/icon32.png">
+    <link rel="icon" href="chrome://browser/content/aboutlogins/icons/favicon.svg">
   </head>
   <body class="importreport">
+    <header>
+      <img id="branding-logo" src="chrome://branding/content/aboutlogins.svg" alt=""/>
+    </header>
+
     <section id="report-body">
       <div class="summary">
         <h2 data-l10n-id="about-logins-import-report-title"></h2>
