--- a/browser/components/preferences/moreFromMozilla.inc.xhtml
+++ b/browser/components/preferences/moreFromMozilla.inc.xhtml
@@ -9,6 +9,7 @@
   <vbox id="moreFromMozillaCategory"
     class="subcategory"
     data-hidden-from-search="true"
+    hidden="true"
     data-category="paneMoreFromMozilla">
     <html:h1 class="title" data-l10n-id="pane-more-from-mozilla-title" />
     <html:p class="subtitle" data-l10n-id="pane-more-from-mozilla-subtitle" />
