--- a/browser/components/preferences/moreFromMozilla.inc.xhtml
+++ b/browser/components/preferences/moreFromMozilla.inc.xhtml
@@ -13,33 +13,40 @@
     data-category="paneMoreFromMozilla">
     <html:h1 class="title" data-l10n-id="pane-more-from-mozilla-title" />
     <html:p class="subtitle" data-l10n-id="pane-more-from-mozilla-subtitle" />
-    <!-- Mozilla Products -->
-    <vbox class="list-item">
+  </vbox>
+</html:template>
+<html:template id="simple">
+  <vbox class="list-item simple">
+    <hbox>
       <label>
-        <html:h2 id="firefox-mobile" class="product-title" data-l10n-id="firefox-mobile-title" />
+        <html:h2 class="product-title" />
       </label>
-      <html:p class="description" data-l10n-id="firefox-mobile-description" />
-      <hbox>
-        <button id="fxMobile" class="primary small-button" data-l10n-id="button-firefox-mobile" />
-      </hbox>
-    </vbox>
-    <vbox class="list-item">
-      <label>
-        <html:h2 id="mozilla-vpn" class="product-title" data-l10n-id="mozilla-vpn-title" />
-      </label>
-      <html:p class="description" data-l10n-id="mozilla-vpn-description" />
-      <hbox>
-        <button id="mozillaVPN" class="primary small-button" data-l10n-id="button-mozilla-vpn" />
-      </hbox>
-    </vbox>
-    <vbox class="list-item">
-      <label>
-        <html:h2 id="mozilla-rally" class="product-title" data-l10n-id="mozilla-rally-title" />
-      </label>
-      <html:p class="description" data-l10n-id="mozilla-rally-description" />
-      <hbox>
-        <button id="mozillaRally" class="primary small-button" data-l10n-id="button-mozilla-rally" />
-      </hbox>
-    </vbox>
+    </hbox>
+    <hbox>
+      <html:p class="description" />
+      <html:a class="text-link wants-telemetry" hidden="true" />
+    </hbox>
+    <hbox>
+      <button class="primary small-button" hidden="true" />
+    </hbox>
+    <hbox>
+      <html:div class="qrcode-section" hidden="true" />
+    </hbox>
+  </vbox>
+</html:template>
+
+<html:template id="advanced">
+  <vbox class="list-item advanced">
+    <hbox class="product-img">
+      <vbox class="product-info" flex="1">
+        <label>
+          <html:h2 class="product-title" />
+        </label>
+        <html:p class="description" />
+        <html:a class="text-link wants-telemetry" hidden="true" />
+        <html:div><button class="primary small-button" hidden="true"/></html:div>
+      </vbox>
+      <html:div class="qrcode-section" hidden="true" />
+    </hbox>
   </vbox>
 </html:template>
