Backed out changeset 846f0c8241e6 (bug 1743987) for causing bc failures in browser_html_list_view.js
CLOSED TREE

UltraBlame original commit: af0471da595f2c62a5e3ee33a5736673ddb66e4c

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -209,7 +209,7 @@ message-bar-stack > * {
   margin-bottom: 16px;
 }
 
-addon-list:not([type="theme"]) addon-card:not([expanded]) > .addon.card[active="false"] {
+addon-card:not([expanded]) > .addon.card[active="false"] {
   opacity: 0.6;
   transition: opacity 150ms, box-shadow 150ms;
 }
