--- a/browser/components/places/content/placesContextMenu.inc.xhtml
+++ b/browser/components/places/content/placesContextMenu.inc.xhtml
@@ -21,7 +21,7 @@
             oncommand="PlacesUIUtils.openSelectionInTabs(event);"
             data-l10n-id="places-open-all-bookmarks"
             selection-type="multiple"
-            node-type="link_bookmark|separator"/>
+            node-type="link_bookmark"/>
   <menuitem id="placesContext_open:newtab"
             command="placesCmd_open:tab"
             data-l10n-id="places-open-in-tab"
