Bug 1754547 - Generalize moz-os-version into moz-platform. r=dao,preferences-reviewers,Gijs
Allow differentiating non-windows platforms on it.

Differential Revision: https://phabricator.services.mozilla.com/D138431

UltraBlame original commit: 2b9a5979a66e3f68ae1dbf9e1d1ab4f11973d4c2

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -54,8 +54,8 @@ body {
    with the ruleset above. We must set background properties on :root and not
    #navigator-toolbox on Windows 7/8 due to a WebRender bug that hides the
    minimize/maximize/close buttons. */
-@media not (-moz-os-version: windows-win7) {
-  @media not (-moz-os-version: windows-win8) {
+@media not (-moz-platform: windows-win7) {
+  @media not (-moz-platform: windows-win8) {
     #navigator-toolbox:-moz-lwtheme {
       background-color: var(--lwt-accent-color);
     }
@@ -74,8 +74,8 @@ body {
   }
 }
 /* TODO bug 1695280: Remove this block. */
-@media (-moz-os-version: windows-win7),
-       (-moz-os-version: windows-win8) {
+@media (-moz-platform: windows-win7),
+       (-moz-platform: windows-win8) {
   :root:-moz-lwtheme {
     background-color: var(--lwt-accent-color);
     background-image: var(--lwt-additional-images);
