--- a/editor/reftests/xul/input.css
+++ b/editor/reftests/xul/input.css
@@ -20,7 +20,7 @@ html|input.empty {
   color: graytext;
 }
 
-@media (-moz-windows-default-theme) and (-moz-os-version: windows-win7) {
+@media (-moz-windows-default-theme) and (-moz-platform: windows-win7) {
   :root:not(.winxp) html|input.empty {
     font-style: italic;
   }
@@ -30,7 +30,7 @@ html|input.num {
   text-align: end;
 }
 
-
+/* .textbox-input has 1px extra padding on Linux */
 #linux html|input.num {
   padding-inline-end: 3px;
 }
