Bug 1753588 - Restrict the number of form looked up while checking whether autofilling a username-only form r=tgiles,sgalich
This patch adds a pref "signon.usernameOnlyForm.formThreshold" to limit
the number of form we processed while receiving "PWMGR_NUM_FORM_HAS_POSSIBLE_USERNAME_EVENT_PER_DOC"
event. This improves the performance while loading a page with multiple username-only likely form.

Differential Revision: https://phabricator.services.mozilla.com/D138121

UltraBlame original commit: 5936869f553ddf0b9d1d12e7f0914997c989e01f

--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_basic_form.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_basic_form.html
@@ -16,7 +16,12 @@ Login Manager test: multiple login autocomplete
 var chromeScript = runChecksAfterCommonInit();
 
 // Temporarily allow use of eval() in this test.
-SpecialPowers.pushPrefEnv({"set": [["security.allow_eval_with_system_principal", true]]});
+SpecialPowers.pushPrefEnv({
+  "set": [
+    ["security.allow_eval_with_system_principal", true],
+    ["signon.usernameOnlyForm.lookupThreshold", 100], // ignore the threshold in test
+  ]
+});
 
 function addLoginsInParent(...aLogins) {
   let script = runInParent(function addLoginsInParentInner() {
