Backed out changeset 5936869f553d (bug 1753588) for causing failures on test_basic_form_honor_autocomplete_off.html. CLOSED TREE
UltraBlame original commit: df3ebc33eca8d286cf5eef243463aa2aa2078319

--- a/toolkit/components/passwordmgr/test/mochitest/test_basic_form_honor_autocomplete_off.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_basic_form_honor_autocomplete_off.html
@@ -66,11 +66,10 @@ addLoginsInParent(
 let {ContentTaskUtils} = SpecialPowers.Cu.import("resource://testing-common/ContentTaskUtils.jsm", {});
 
 // Set the pref before the document loads.
-SpecialPowers.pushPrefEnv({
-  "set": [
-    ["signon.autofillForms.autocompleteOff", false],
-    ["signon.usernameOnlyForm.lookupThreshold", 100], // ignore the threshold in test
-  ]
+SpecialPowers.setBoolPref("signon.autofillForms.autocompleteOff", false);
+
+SimpleTest.registerCleanupFunction(() => {
+  SpecialPowers.clearUserPref("signon.autofillForms.autocompleteOff");
 });
 
 // Check for expected username/password in form.
