--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_basic_form.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_basic_form.html
@@ -16,12 +16,7 @@ Login Manager test: multiple login autocomplete
 var chromeScript = runChecksAfterCommonInit();
 
 // Temporarily allow use of eval() in this test.
-SpecialPowers.pushPrefEnv({
-  "set": [
-    ["security.allow_eval_with_system_principal", true],
-    ["signon.usernameOnlyForm.lookupThreshold", 100], // ignore the threshold in test
-  ]
-});
+SpecialPowers.pushPrefEnv({"set": [["security.allow_eval_with_system_principal", true]]});
 
 function addLoginsInParent(...aLogins) {
   let script = runInParent(function addLoginsInParentInner() {
