Bug 1749722 - Clean up focus outline CSS for the bookmark panel. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D135701

UltraBlame original commit: 105fc4df5e7f5cf9222c66f16871e9d3045ed360

--- a/toolkit/themes/shared/menulist.inc.css
+++ b/toolkit/themes/shared/menulist.inc.css
@@ -32,8 +32,8 @@
   background-color: var(--button-active-bgcolor, color-mix(in srgb, currentColor 20%, ButtonFace));
 }
 
-:host(:not([native]):-moz-focusring) {
-  outline: 2px solid var(--focus-outline-color, -moz-accent-color);
+:host(:not([native]):focus-visible) {
+  outline: var(--focus-outline, 2px solid -moz-accent-color);
   outline-offset: var(--focus-outline-offset, 2px);
 }
 
