--- a/layout/reftests/css-break/box-decoration-break-bug-1249913-ref.html
+++ b/layout/reftests/css-break/box-decoration-break-bug-1249913-ref.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
-  <title>'box-decoration-break' with child overflow</title>
+  <title>Reference: 'box-decoration-break' with child overflow</title>
   <link rel="author" title="Mats Palmgren" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1249913">
   <style type="text/css">
 body,html { color:black; background:white; font-size:16px; padding:0; margin:0; }
