Bug 1755023 - Set --focus-outline in toolkit with -moz-accent-color as the default color. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D138547

UltraBlame original commit: f3817918d23b9692e957df5ad71d18fa231078d5

--- a/toolkit/themes/osx/global/global.css
+++ b/toolkit/themes/osx/global/global.css
@@ -9,6 +9,8 @@
   --panel-description-color: hsl(0,0%,50%);
 
   --focus-ring-box-shadow: 0 0 0 1px -moz-mac-focusring inset, 0 0 0 1px -moz-mac-focusring;
+  --focus-outline-color: -moz-mac-focusring;
+
   /* ::::: Styles ::::: */
   appearance: auto;
   -moz-default-appearance: dialog;
