Bug 1752829 - Make decorative noodles and logo style configurable in AboutWelcome r=Mardak
Differential Revision: https://phabricator.services.mozilla.com/D137452

UltraBlame original commit: c75cbdfcdde8ee2224090176169791afb21d5a9e

--- a/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
+++ b/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
@@ -77,6 +77,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    &.with-noodles {
+      height: 503px;
+      width: 504px;
+    }
   }
 
   .main-content {
@@ -896,8 +901,6 @@ body {
 
     .section-main {
       z-index: 1;
-      width: 504px;
-      height: 503px;
       margin: auto;
 
       .main-content-inner {
@@ -1008,8 +1011,6 @@ body {
 
     .section-main {
       z-index: 1;
-      width: 504px;
-      height: 503px;
       margin: auto;
 
       .main-content-inner {
