--- a/toolkit/themes/shared/dirListing/dirListing.css
+++ b/toolkit/themes/shared/dirListing/dirListing.css
@@ -89,19 +89,19 @@ td:not(:first-child) {
 }
 
 .up::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
   margin-inline: -20px 4px;
   vertical-align: middle;
-%ifdef MOZ_WIDGET_GTK
-  content: url(moz-icon://stock/gtk-go-up?size=menu);
-%else
-  content: url(chrome://global/skin/dirListing/up.png);
-%endif
+  background: url(chrome://global/skin/dirListing/up.png) center/16px no-repeat;
 }
 
 .dir::before {
-%ifdef MOZ_WIDGET_GTK
-  content: url(moz-icon://stock/gtk-directory?size=menu);
-%else
-  content: url(chrome://global/skin/dirListing/folder.png);
-%endif
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url(chrome://global/skin/dirListing/folder.png) center/16px no-repeat;
 }
