Bug 1755184 - Remove macOS-specific --focus-ring-box-shadow. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D138624

UltraBlame original commit: b19355c7dbd29d0d2dc007d3c70c911190d29849

--- a/browser/themes/osx/customizableui/panelUI.css
+++ b/browser/themes/osx/customizableui/panelUI.css
@@ -88,6 +88,6 @@ menu.subviewbutton > .menu-right {
   background-color: var(--panel-item-active-bgcolor);
 }
 
-.panel-button:-moz-focusring {
-  box-shadow: var(--focus-ring-box-shadow);
+.panel-button:focus-visible {
+  outline: var(--focus-outline);
 }
