--- a/browser/themes/linux/places/sidebar.css
+++ b/browser/themes/linux/places/sidebar.css
@@ -1,8 +1,8 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
+/* Sidebars */
 
 %include ../../shared/places/sidebar.inc.css
 
@@ -17,10 +17,6 @@
 #viewButton {
   margin: 1px 0;
   margin-inline-start: 4px;
-}
-
-#viewButton:-moz-focusring:not(:hover, [open]) {
-  outline: 1px dotted -moz-DialogText;
 }
 
 :root[uidensity=touch] #search-box,
