--- a/browser/themes/osx/places/sidebar.css
+++ b/browser/themes/osx/places/sidebar.css
@@ -1,14 +1,14 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
+/* Sidebars */
 
 %include ../../shared/places/sidebar.inc.css
 
 .sidebar-placesTree {
   margin: 0;
-  
+  /* Default font size is 11px on mac, so this is 12px */
   font-size: 1.0909rem;
 }
 
@@ -38,18 +38,14 @@
 }
 
 #sidebar-search-container {
-  
-
+  /* Native searchbar styling already adds 4px margin on Mac, so
+   * adding 4px padding results in 8px of total whitespace. */
   padding: 4px;
 }
 
 #viewButton {
   margin: 4px 0;
   margin-inline-end: 4px;
-  
+  /* Default font size is 11px on mac, so this is 12px */
   font-size: 1.0909rem;
-}
-
-#viewButton:focus {
-  box-shadow: var(--focus-ring-box-shadow);
 }
